--- a/js09/package.json
+++ b/js09/package.json
@@ -4,7 +4,7 @@
   "description": "Uso de NPM para manejar dependencias",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [
     "npm",
@@ -16,5 +16,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0-alpha3"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
